# omega

./: .gitignore  404.html  index.html  package-lock.json  package.json  server.js  tsconfig.json
.github/workflows/: publish.yml
_next/static/-jxmz8hoym-7rhtwrovul/: _buildmanifest.js  _clientmiddlewaremanifest.js  _ssgmanifest.js
_next/static/chunks/: 0-h3ne4v7rky..js  013~636nl.~3p.css  02ftg-2ko8_s5.js  0atqmo.o7qbck.js  0b.8t3x8lzhzs.js  0gx7s2dqftoiu.js  0ln69uy-raen1.js  0wcpxkbl~5hf1.js  turbopack-09y2dj4nnl~04.js
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/python/: ai_scan_sidecar.py  claude_vision.py  opencv_vectorize.py  parametric_match.py  requirements.txt
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  SIGNING.md  find-window.ps1  gen-icon.ps1  gen_icon.py  show-window.ps1  tauri.conf.json  updater.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: AIScan.tsx  AuthModal.tsx  CameraController.tsx  DimensionLines.tsx  Editor2D.tsx  ExportBridge.tsx  HelpModal.tsx  Layout.tsx  LicenseModal.tsx  OnboardingModal.tsx  PBRMaterialMesh.tsx  ParametricMesh.tsx  PipelineMesh.tsx  QuotePanel.tsx  Scene.tsx  ToastContainer.tsx  UpdateChecker.tsx
apps/desktop/src/lib/: supabase.ts
apps/desktop/src/stores/: aiScanStore.ts  authStore.ts  cameraStore.ts  libraryStore.ts  licenseStore.ts  macroStore.ts  (+5 more)
apps/viewer/: _redirects  index.html  netlify.toml
apps/viewer/.netlify/: netlify.toml  state.json
supabase/: schema.sql
(+6 files in other folders)
